--- a/env.yaml
+++ b/env.yaml
@@ -10,3 +10,7 @@ dependencies:
   - matplotlib=3.7.3
   - cryptography=39.0.0
   # - pyarmor=6.7.4
+volumes:
+    - .:/application:cached
+    - ./:/app:delegated
+    - ./:/another_folder:delegated
