--- a/env.yaml
+++ b/env.yaml
@@ -9,6 +9,7 @@ dependencies:
   - tqdm=4.66.1
   - matplotlib=3.7.3
   - cryptography=39.0.0
+  - scikit-learn==1.3.0
   # - pyarmor=6.7.4
 volumes:
     - .:/application:cached
